--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
       <div id="post_peep">
         <% if @name %>
           <form action="/post_peep" method="post">
-            <textarea name="text" placeholder="Message" id="text" name="message" onInput="CountChars(this);" required></textarea>
+            <textarea name="text" placeholder="Message" id="text" onInput="CountChars(this);" required></textarea>
             <p id="character_count">Characters: 0/200</p>
             <input type="submit" value="Peep!" id="peep_button"></button>
           </form>
@@ -36,24 +36,30 @@
       </div>
 
       <div id="peeps">
-        <ul>
+        <ul id="peep_list">
           <% @peeps.reverse_each do |peep| %>
             <li id="<%= peep.id %>">
               <a href="<%= "users/#{peep.find_user_info.username}" %>">
                 <span id="poster_name"><%= "#{peep.find_user_info.name}" %></span>
                 <span id="poster_username"><%= "@#{peep.find_user_info.username}" %></span>
               </a>
-              <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span><br/>
+              <span id="peep_time"><%= peep.convert_time(peep.post_time) %></span>
+              <span id="edited"><%= peep.edited == 't' ? 'Edited' : '' %></span><br/>
               <hr>
               <p id="peep_text"><%= peep.check_interacton(peep.text, "index") %></p>
               <% if session[:id] == peep.find_user_info.id %>
                 <hr>
-                <form action="/delete/<%= peep.id %>" method="post">
-                  <input id="hidden" type="hidden" name="_method" value="delete">
-                  <input type="submit" value="Delete" id="delete_peep" onmouseover="RedBorder(this)" onmouseout="NormalBorder(this);">
-                </form>
+                <span id="peep_options">
+                  <form action="/edit/<%= peep.id %>" method="get">
+                    <input type="submit" value="Edit Peep" id="edit_peep" onmouseover="OrangeBorder(this)" onmouseout="NormalBorder(this);">
+                  </form>
+                  <form action="/delete/<%= peep.id %>" method="post">
+                    <input id="hidden" type="hidden" name="_method" value="delete">
+                    <input type="submit" value="Delete" id="delete_peep" onmouseover="RedBorder(this)" onmouseout="NormalBorder(this);">
+                  </form>
+                </span>
               <% end %>
-          </li>
+            </li>
           <% end %>
         </ul>
       </div>
